fix(mobile): bottom margin on iOS

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -26,7 +26,7 @@
 
 html {
     /* this fixes FF filter vs. position fixed bug: https://github.com/zadam/trilium/issues/233 */
-    height: 100%;
+    height: 100vh;
     overscroll-behavior: none;
 }
 
@@ -34,8 +34,8 @@ body {
     /* Fix for CKEditor block gutter icon "stretching" body and causing scrollbar to appear after pressing enter
         on the last line of the editor. */
     position: fixed;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: var(--main-background-color);
     color: var(--main-text-color);
     font-family: var(--main-font-family);
